--- a/index.html
+++ b/index.html
@@ -28,32 +28,27 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container"></div>
     <h2>Plug-and-Play Methods for Integrating Physical and Learned Models in Computational Imaging</h2>
-    <h3>IEEE Signal Processing Magazine</h3>
-            <p class="abstract"><b>Tutorial on Plug-and-Play </b></p>
+    <p class="abstract"><b>IEEE Signal Processing Magazine Tutorial on Plug-and-Play Methods</b></p>
     <hr>
     <p class="authors">
-        <a href="https://wjgancn.github.io"> Weijie Gan<sup>1</sup></a>,
-        <a href="https://sunyumark.github.io"> Yu Sun<sup>1</sup></a>,
-        <a href="https://scholar.google.com/citations?user=PU44ObcAAAAJ&hl=en"> Cihat Eldeniz<sup>2</sup></a>,
-        <a href="https://jiamingliu-jeremy.github.io"> Jiaming Liu<sup>3</sup></a>,
-        <a href="https://profiles.wustl.edu/en/persons/hongyu-an"> Hongyu An<sup>2,3,4,5</sup></a> 
-        <a href="https://engineering.wustl.edu/faculty/Ulugbek-Kamilov.html"> Ulugbek S. Kamilov<sup>1,3</sup></a> </br>
+        <a href="https://engineering.wustl.edu/faculty/Ulugbek-Kamilov.html"> Ulugbek S. Kamilov<sup>1,2</sup></a>,
+        <a href="https://engineering.purdue.edu/~bouman">Charles A. Bouman<sup>3</sup></a>,
+        <a href="https://www.math.purdue.edu/~buzzard">Gregery T. Buzzard<sup>4</sup></a>,
+        <a href="http://brendt.wohlberg.net">Brendt Wohlberg<sup>5</sup></a></br>
     </p>
     <p>
         <a><sup>1</sup>Department of Computer Science & Engineering, Washington University in St.Louis, St. Louis, MO, USA</a></br>
-        <a><sup>2</sup>Mallinckrodt Institute of Radiology,Washington University in St. Louis, St.Louis, MO, USA</a></br>
-        <a><sup>3</sup>Department of Electrical & SystemsEngineering, Washington University in St.Louis, St. Louis, MO, USA</a></br>
-        <a><sup>4</sup>Department of Biomedical Engineering,Washington University in St. Louis, St.Louis, MO, USA</a></br>
-        <a><sup>5</sup>Department of Neurology, WashingtonUniversity in St. Louis, St. Louis, MO, USA</a></br>
+        <a><sup>2</sup>Department of Electrical & Systems Engineering, Washington University in St.Louis, St. Louis, MO, USA</a></br>
+        <a><sup>3</sup>Electrical & Computer Engineering, Purdue University, West Lafayette, IN, USA</a></br>
+        <a><sup>4</sup>Department of Mathematics, Purdue University, West Lafayette, IN, USA</a></br>
+        <a><sup>5</sup> Theoretical Division at Los Alamos National Laboratory, Los Alamos, NM, USA</a></br>
     </p>
 
     <div class="btn-group" role="group" aria-label="Top menu">
-        <a class="btn btn-primary" href="https://ieeexplore.ieee.org/document/9743932">Paper</a>
-        <a class="btn btn-primary" href="https://arxiv.org/abs/2107.05533">Preprint</a>
-        <a class="btn btn-primary" href="https://github.com/wustl-cig/DeCoLearn">Code</a>
+        <!--<a class="btn btn-primary" href="https://ieeexplore.ieee.org/document/9743932">Paper</a>-->
+        <a class="btn btn-primary" href="https://arxiv.org/abs/2203.17061">Preprint</a>
+        <a class="btn btn-primary" href="https://github.com/lanl/scico-data/blob/main/notebooks/superres_ppp_dncnn_admm.ipynb">Code</a>
     </div>
-
-    <p>We are grateful to <b>Vivian Chen</b> for her contributions to this project website.</p>
 </div>
 
 <div class="container">
@@ -61,8 +56,8 @@
 
         <div class="row align-items-center">
 			<div class="col justify-content-center text-center">
-                <img src="img/GIF.gif" style="width:85%" alt="Banner">
-                <p>An illustration of DeCoLearn training procedure.</p>
+                <img src="img/fig2.jpg" style="width:85%" alt="Banner">
+                <p> Image priors for PnP can be obtained by training CNNs to remove AWGN from a set of images.</p>
             </div>
         </div>
 
@@ -70,35 +65,36 @@
         <h2>Abstract</h2>
         <hr>
         <p>
-            Deep neural networks for medical image reconstruction are traditionally trained using high-quality ground-truth images as training targets. Recent work on Noise2Noise (N2N) has shown the potential of using multiple noisy measurements of the same object as an alternative to having a ground-truth. However, existing N2N-based methods are not suitable for learning from the measurements of an object undergoing nonrigid deformation. This paper addresses this issue by proposing the <b>deformation-compensated learning (DeCoLearn)</b> method for training deep reconstruction networks by compensating for object deformations. A key component of DeCoLearn is a deep registration module, which is jointly trained with the deep reconstruction network without any ground-truth supervision. We validate DeCoLearn on both simulated and experimentally collected magnetic resonance imaging (MRI) data and show that it significantly improves imaging quality.
+            <b>Plug-and-Play Priors (PnP)</b> is one of the most widely-used frameworks for solving computational imaging problems through the integration of physical models and learned models. PnP leverages high-fidelity physical sensor models and powerful machine learning methods for prior modeling of data to provide state-of-the-art reconstruction algorithms. PnP algorithms alternate between minimizing a data-fidelity term to promote data consistency and imposing a learned regularizer in the form of an image denoiser. Recent highly-successful applications of PnP algorithms include bio-microscopy, computerized tomography, magnetic resonance imaging, and joint ptycho-tomography. This article presents a unified and principled review of PnP by tracing its roots, describing its major variations, summarizing main results, and discussing applications in computational imaging. We also point the way towards further developments by discussing recent results on equilibrium equations that formulate the problem associated with PnP algorithms.
         </p>
     </div>
 
     <div class="section">
-        <h2>Model</h2>
+        <h2>Relationship to Deep Unfolding</h2>
         <hr>
         <div class="row align-items-center">
 			<div class="col justify-content-center text-center">
-                <img style="width:100%" src="img/model.png" >
+                <img style="width:90%" src="img/fig9.jpg" >
+                <p>The PnP framework is related to two other popular computational-imaging paradigms, deep unfolding (DU) and deep equilibrium models (DEQ). A PnP algorithm, such as PnP-ISTA or RED-SD, can be turned into a DU architecture by truncating the algorithm to a fixed number of iterations and training the weights of the CNN prior end-to-end. Similarly, a DEQ architecture can be obtained by running the PnP algorithm until convergence and using the implicit differentiation at the fixed point to train the weights. The CNN operator in DU/DEQ is not necessarily an AWGN denoiser, instead it is an artifact-removal (AR) operator trained to remove artifacts specific to the PnP iterations</p>
             </div>
         </div>
     </div>
     
     <div class="section">
-        <h2>Validation on Experimentally-Collected 4D MRI Data</h2>
+        <h2>Applications of PnP</h2>
         <hr>
 
         <div class="row align-items-center">
 			<div class="col justify-content-center text-center">
-                <img src="img/video_slice.gif" style="width:70%" alt="Banner">
-                <p>A video of DeCoLearn reconstructed images across <i>different slice</i>. <b>LEFT</b>: inverse multi-coil non-uniform fast Fourier transform (MCNUFFT). <b>RIGHT</b>: DeCoLearn.</p>
+                <img src="img/fig3.jpg" style="width:90%" alt="Banner">
+                <p> A single pre-trained CNN denoiser in PnP can address different super-resolution factors.</p>
             </div>
         </div>
         
         <div class="row align-items-center">
 			<div class="col justify-content-center text-center">
-                <img src="img/video_phase.gif" style="width:70%" alt="Banner">
-                <p>A video of DeCoLearn reconstructed images across <i>different respiratory phase</i>. <b>LEFT</b>: inverse multi-coil non-uniform fast Fourier transform (MCNUFFT). <b>RIGHT</b>: DeCoLearn.</p>
+                <img src="img/fig5.jpg" style="width:90%" alt="Banner">
+                <p>PnP algorithms explicitly separate the application of the forward model from that of the learned prior, enabling the adaptation of trained CNNs to new sensor configurations.  This is illustrated on experimentally collected 3D MRI data corresponding to 800 radial spokes (scans of about 2 minute).</p>
             </div>
         </div>
 
