Updated the reference to the published version

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <a><sup>1</sup>Computational Imaging Group (CIG), Washington University in St.Louis, St. Louis, MO, USA</a></br>
         <a><sup>2</sup>Electrical & Computer Engineering, Purdue University, West Lafayette, IN, USA</a></br>
         <a><sup>3</sup>Department of Mathematics, Purdue University, West Lafayette, IN, USA</a></br>
-        <a><sup>4</sup> Theoretical Division at Los Alamos National Laboratory, Los Alamos, NM, USA</a></br>
+        <a><sup>4</sup>Theoretical Division at Los Alamos National Laboratory, Los Alamos, NM, USA</a></br>
     </p>
 
     <div class="btn-group" role="group" aria-label="Top menu">
-        <!--<a class="btn btn-primary" href="https://ieeexplore.ieee.org/document/9743932">Paper</a>-->
+        <a class="btn btn-primary" href="https://ieeexplore.ieee.org/document/10004791">Paper</a>
         <a class="btn btn-primary" href="https://arxiv.org/abs/2203.17061">Preprint</a>
         <a class="btn btn-primary" href="https://github.com/lanl/scico-data/blob/main/notebooks/superres_ppp_dncnn_admm.ipynb">Code</a>
     </div>
@@ -139,7 +139,11 @@
                 title={Plug-and-Play Methods for Integrating 
                 Physical and Learned Models in Computational Imaging},
                 journal={IEEE Signal Process. Mag.},
-                year={2022}
+                year={2023},
+                month={January},
+                volume={40},
+                number={1},
+                pages={85--97}
               }
         </div>
     </div>
